--- a/package.json
+++ b/package.json
@@ -16,25 +16,27 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/animations": "~7.1.0",
+    "@angular/cli": "~7.1.4",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
+    "@angular/compiler-cli": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "bootstrap": "^3.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
     "typescript": "~3.1.6",
-    "@angular-devkit/build-angular": "~0.11.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular/language-service": "~7.1.0",
